issue #11828 Inconsistent vertical spacing of ordered list items in generated HTML

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -77,6 +77,7 @@ dt {
 
 p.startli, p.startdd {
 	margin-top: 2px;
+	margin-bottom: 0px;
 }
 
 th p.starttd, th p.intertd, th p.endtd {
@@ -280,15 +281,35 @@ dl.el {
 }
 
 ul.check {
-	list-style:none;
-	text-indent: -16px;
-	padding-left: 38px;
+	list-style: none;
+	padding-left: 40px;
+	margin: 0;
 }
-li.unchecked:before {
-	content: "\2610\A0";
+
+ul.check li {
+	position: relative;
 }
-li.checked:before {
-	content: "\2611\A0";
+
+li.unchecked::before, li.checked::before {
+	position: absolute;
+	left: -18px;
+	top: 0;
+}
+
+li.unchecked::before {
+	content: "☐";
+}
+
+li.checked::before {
+	content: "☑";
+}
+
+ul.check li > p {
+	display: inline;
+}
+
+ul.check li > p:not(:first-child) {
+	display: block;
 }
 
 ol {
